# Canonicity

./: README.md  pyproject.toml
advtok-replication/: .gitignore  requirements-h100.txt
advtok-replication/advtok/: search.py
advtok-replication/configs/: paper_h100.toml  smoke_h100.toml
advtok-replication/paper_replication/: __init__.py  config.py  data.py
advtok-replication/scripts/: bootstrap_autodan.py  fetch_data.sh  setup_h100.sh
experiments/: README.md
prompts/: README.md  wikitext-2-test-mamba-1024.jsonl  wikitext-2-train-articles-mamba-1024-100.jsonl
references/: README.md  paper-figure5-canon-perc-length.txt
reports/model-matrix-final/: REPORT.md  adjusted_recurrence_discoveries.csv  analyze_matrix.py  checkpoint_summary.csv  prompt_survival_summary.csv  segment_summary.csv
reports/model-matrix-preliminary/: REPORT.md  analyze.py  analyze_gemma.py  gemma_checkpoint_summary.csv  gemma_prompt_dispersion.csv  gemma_provenance.json  gemma_segment_summary.csv
results/mamba-130m-long-2048/: metadata.json  noncanonical_examples.jsonl  recurrence.csv  rollout_segments.csv  samples.jsonl  segment_analysis_manifest.json  segment_count_distribution.csv  segments.jsonl  summary.csv
results/mamba-130m-wikitext-1024x1024/: metadata.json  noncanonical_examples.jsonl  pooled_summary.csv  recurrence.csv  rollout_segments.csv  samples.jsonl  segments.jsonl  summary.csv  (+2 more)
tests/: test_aggregate.py  test_cli.py  test_core.py  test_dataset_prompts.py  test_generation.py  test_multiple_testing.py  test_sample_store.py  test_segment_reporting.py  test_segments.py
(+637 files in other folders)
